// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<MaybeLink>
  <styled.div />
</MaybeLink>
`;

exports[`IconButton renders correctly 1`] = `
<MaybeLink>
  <styled.div>
    <span />
  </styled.div>
</MaybeLink>
`;
